# fastapi-rag

./: .gitignore  Dockerfile  Dockerfile.tailwind  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: create_embeddings.py  db.py  insert_embeddings.py  llm.py  main.py  transformer.py
src/commands/: create_embeddings.py  download_example_data.py  update_embeddings_db.py
src/static/js/: sse.min.js
src/templates/: base.html  collection.html  collection_block.html  collections.html  collections_block.html  query_sse.html  todos.html
tailwindcss/: package-lock.json  package.json  tailwind.config.js
