[project]
name = "fastapi-rag"
version = "0.1.0"
description = "FastAPI/HTMX RAG for answering question about documents."
authors = [
    { name = "Ulrich Feindt", email = "ufeindt@gmail.com" }
]
dependencies = [
    "fastapi[standard]>=0.112.0",
    "torch @ https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.4.0%2Bcpu.cxx11.abi-cp312-cp312-linux_x86_64.whl#sha256=99f701862b88f2ece4de38ce01622735d313a8794c03d21a2be1691a7ebdb3ce",
    "openai>=1.38.0",
    "qdrant-client>=1.10.1",
    "sentence-transformers>=3.0.1",
    "jinja2>=3.1.4",
    "typer>=0.12.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.6",
    "ipython>=8.26.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rpg_rag"]

[tool.ruff]
line-length = 88
exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "C",  # mccabe rules
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "C901",  # max-complexity-10
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

